ncc/testsuite/negative/partial.n
namespace Tyvars {
  partial class C [X] { }
  partial class C [Y] { } // E: partial declarations of `Tyvars.C' must have the same type parameter names in the same order
}
